Fixed some inconsistencies of the menu bar in dark mode

--- a/base.css
+++ b/base.css
@@ -821,13 +821,16 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
 :root[gtktiledwindow="true"] #nav-bar:-moz-lwtheme-brighttext,
 :root[gtktiledwindow="true"] #nav-bar:-moz-lwtheme-brighttext:-moz-window-inactive{
     border-radius: 6px 6px 0 0 !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
 }
 :root[sizemode="maximized"] #nav-bar:-moz-lwtheme-brighttext,
 :root[sizemode="maximized"] #nav-bar:-moz-lwtheme-brighttext:-moz-window-inactive,
 :root[sizemode="fullscreen"] #nav-bar:-moz-lwtheme-brighttext {
     border-radius: 0 0 0 0 !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
+}
+:root[sizemode="fullscreen"] #nav-bar:-moz-lwtheme-brighttext {
+	border-bottom: 1px solid rgb(36, 38, 39) !important;
 }
 
 /*** FOCUS FIX ***/
@@ -835,7 +838,7 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
     appearance: none !important;
     border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #3B3B3B, #383838) !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
 }
 #urlbar:not([focused="true"]):-moz-lwtheme-brighttext:-moz-window-inactive {
     border: 1px solid #282828 !important;
@@ -852,7 +855,9 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
 	background: rgb(51,51,51) !important;
 	border: 1px solid rgba(45,45,45,1) !important;
 }
-#toolbar-menubar:-moz-lwtheme-brighttext:not(:-moz-lwtheme):-moz-window-inactive,
+#toolbar-menubar:-moz-lwtheme-brighttext:not(:-moz-lwtheme):-moz-window-inactive {
+    background: #383838 !important;
+}
 #PersonalToolbar:-moz-lwtheme-brighttext:not(:-moz-lwtheme):-moz-window-inactive {
     background: rgb(51, 51, 51) !important;
     border-top: none !important;
@@ -875,7 +880,7 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
     appearance: none !important;
     border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #343434, #2C2C2C) !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
 }
 #search-container:-moz-lwtheme-brighttext {
     -moz-window-dragging: drag !important;
@@ -926,9 +931,9 @@ toolbar .toolbarbutton-1:not(#back-button):not(#forward-button):not(#reload-butt
 	border-bottom: 1px solid rgb(36, 38, 39) !important;
 }
 #toolbar-menubar:-moz-lwtheme-brighttext {
-    background: rgb(45, 45, 45) !important;
+    background: #2C2C2C !important;
     border-top: none !important;
-	border-bottom: 1px solid rgb(36, 38, 39) !important;
+	border-bottom: none !important;
 }
 #PlacesToolbarItems .bookmark-item:not(menuitem):not(menu):-moz-any([open], [checked], :hover, :active):-moz-lwtheme-brighttext {
     background-color: rgba(255,255,255,0.1) !important;
@@ -1073,13 +1078,16 @@ toolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hov
 :root[gtktiledwindow="true"] #nav-bar,
 :root[gtktiledwindow="true"] #nav-bar:-moz-window-inactive{
     border-radius: 6px 6px 0 0 !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
 }
 :root[sizemode="maximized"] #nav-bar,
 :root[sizemode="maximized"] #nav-bar:-moz-window-inactive,
 :root[sizemode="fullscreen"] #nav-bar {
     border-radius: 0 0 0 0 !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
+}
+:root[sizemode="fullscreen"] #nav-bar {
+	border-bottom: 1px solid rgb(36, 38, 39) !important;
 }
 
 /*** FOCUS FIX for Tweaks ***/
@@ -1087,7 +1095,7 @@ toolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hov
     appearance: none !important;
     border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #3B3B3B, #383838) !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
 }
 #TabsToolbar:-moz-window-inactive {
 	background: linear-gradient(180deg, rgb(48, 48, 48) 0%, rgb(51, 51, 51) 10%, rgb(51, 51, 51) 100%) !important;
@@ -1105,9 +1113,9 @@ toolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hov
 	border: 1px solid rgba(45,45,45,1) !important;
 }
 #toolbar-menubar:-moz-window-inactive {
-    background: rgb(51, 51, 51) !important;
+    background: #383838 !important;
     border-top: none !important;
-	border-bottom: 1px solid rgb(36, 38, 39) !important;
+	border-bottom: none !important;
 }
 #PersonalToolbar:-moz-window-inactive {
     background: rgb(51, 51, 51) !important;
@@ -1134,7 +1142,7 @@ toolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hov
     appearance: none !important;
     border-radius: 6px 6px 0 0 !important;
     background: linear-gradient(to bottom, #343434, #2C2C2C) !important;
-    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07), inset 0 0 0 1px rgba(255,255,255,0.03) !important;
+    box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.07) !important;
 }
 #urlbar[focused="true"] {
     border: 1px solid #2B2C2C !important;
@@ -1194,9 +1202,9 @@ toolbar .toolbarbutton-1:not([disabled="true"]):-moz-any([open], [checked], :hov
 	border-bottom: 1px solid rgb(36, 38, 39) !important;
 }
 #toolbar-menubar {
-    background: rgb(45, 45, 45) !important;
+    background: #2C2C2C !important;
     border-top: none !important;
-	border-bottom: 1px solid rgb(36, 38, 39) !important;
+	border-bottom: none !important;
 }
 menubar > menu[open="true"] {
 	color: #d1d1d1 !important;
